# rgpt

./: .rusty-hook.toml  Cargo.toml  LICENSE.md  README.md
src/: main.rs  response.rs
