[package]
name = "rgpt"
version = "0.1.0"
authors = ["itdudetv"]
edition = "2021"

[dependencies]
dirs = "4.0.0"
rand = "0.8.5"
termion = "2.0.1"
rpassword = "7.2.0"
serde_json = "1.0.93"
futures-util = "0.3.26"
clap = {version="4.1.4", features=["derive"]}
tokio = {version="1.25.0", features=["full"]}
serde = {version="1.0.152", features=["derive"]}
reqwest = {version="0.11.14", features=["json", "stream"]}

[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = false
opt-level = 3
