[package]
name = "rgpt"
version = "0.2.0"
authors = ["linuxtechtips"]
edition = "2021"
description = "A simple and fast shell client for ChatGPT"
license = "MIT"
repository = "https://github.com/linuxtechtips/rgpt"

[dependencies]
dirs = "4.0.0"
rand = "0.8.5"
termion = "2.0.1"
rpassword = "7.2.0"
serde_json = "1.0.93"
futures-util = "0.3.26"
clap = {version="4.1.4", features=["derive"]}
tokio = {version="1.25.0", features=["full"]}
serde = {version="1.0.152", features=["derive"]}
reqwest = {version="0.11.14", features=["json", "stream"]}

[build-dependencies]
clippy = {version="*", optional=true}
rustfmt = {version="*", optional=true}

[dev-dependencies]
rusty-hook = {version="*", optional=false}

[profile.dev]
debug = true
opt-level = 0

[profile.release]
lto = "thin"
debug = false
opt-level = "s"
strip = true
incremental = true
overflow-checks = false
