[package]
name = "rgpt"
version = "0.3.0"
authors = ["linuxtechtips"]
edition = "2021"
description = "A simple and fast shell client for ChatGPT"
license = "MIT"
repository = "https://github.com/linux-techtips/rgpt"
keywords = ["chat", "gpt", "gpt3", "chatgpt", "chatbot", "ai"]

[[bin]]
name = "rgpt"

[profile.dev]
debug = true
opt-level = 0

[profile.release]
lto = "thin"
strip = true
debug = false
opt-level = "s"
incremental = true
overflow-checks = false

[dependencies]
dirs = "4.0.0"
rand = "0.8.5"
rpassword = "7.2.0"
serde_json = "1.0.93"
futures-util = "0.3.26"
clap = {version="4.1.4", features=["derive"]}
tokio = {version="1.25.0", features=["full"]}
serde = {version="1.0.152", features=["derive"]}
crossterm = {version="0.26.0", features=["event-stream"]}
reqwest = {version="0.11.14", features=["json", "stream"]}

[build-dependencies]
clippy = {version="0.0.302", optional=true}
rustfmt = {version="0.10.0", optional=true}

[dev-dependencies]
rusty-hook = {version="0.11.2", optional=false}

